force-app/main/default/objects/Movement_Code__c/Movement_Code__c.object-meta.xml
<CustomObject>
    <label>Movement Code</label>
    <nameField>
        <displayFormat>MVC-{00000000}</displayFormat>
        <label>Movement Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movement Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>