force-app/main/default/objects/Movement_Code__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Movement code might be different for credit and debit in case of On Account. Created to identify the type of accounting to place right movement code.</description>
    <inlineHelpText>Movement code might be different for credit and debit in case of On Account. Created to identify the type of accounting to place right movement code.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>