force-app/main/default/objects/Movement_Code__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Based on account and type of transaction either debit or credit we need to have different move code for some specific transaction like payment.</description>
    <inlineHelpText>Based on account and type of transaction either debit or credit we need to have different move code for some specific transaction like payment.</inlineHelpText>
    <label>GL Account</label>
    <referenceTo>cllease__GL_Account__c</referenceTo>
    <relationshipLabel>Movement Codes</relationshipLabel>
    <relationshipName>Movement_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>