force-app/main/default/objects/Movement_Code__c/Movement_Code__c.field-meta.xml
<CustomField>
    <fullName>Movement_Code__c</fullName>
    <label>Movement Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>